// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Header should render a snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-eqx1ec"
  >
    <a
      class="css-1pyvojw"
      href="https://www.thetimes.co.uk/"
      tabindex="0"
    >
      <div
        class="css-dtd8ey"
      >
        <div
          class="css-lr3feh"
        >
          <div
            class="css-x23rvu"
          >
            <div
              class="css-1aiajnh"
            >
              <section
                class="css-1h4srku"
              >
                <h3
                  class="nk-headline-heading css-i2jo9u"
                >
                  Rugby Union
                </h3>
              </section>
            </div>
          </div>
        </div>
        <button
          class="css-3m8zpq"
          data-testid="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="css-3rbz36"
            fill="currentcolor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
              fill="currentcolor"
            />
          </svg>
        </button>
      </div>
    </a>
    <p
      class="css-16175c6"
    />
  </div>
</DocumentFragment>
`;

exports[`Render Header should render a snapshot with tagline 1`] = `
<DocumentFragment>
  <div
    class="css-eqx1ec"
  >
    <a
      class="css-1pyvojw"
      href="https://www.thetimes.co.uk/"
      tabindex="0"
    >
      <div
        class="css-dtd8ey"
      >
        <div
          class="css-lr3feh"
        >
          <div
            class="css-x23rvu"
          >
            <div
              class="css-1aiajnh"
            >
              <section
                class="css-1h4srku"
              >
                <h3
                  class="nk-headline-heading css-i2jo9u"
                >
                  Rugby Union
                </h3>
              </section>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-5dxu9i"
            data-testid="divider"
          />
          <p
            class="css-1ds22nz"
          >
            this is the test tagline
          </p>
        </div>
        <button
          class="css-3m8zpq"
          data-testid="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="css-3rbz36"
            fill="currentcolor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
              fill="currentcolor"
            />
          </svg>
        </button>
      </div>
    </a>
    <p
      class="css-16175c6"
    >
      this is the test tagline
    </p>
  </div>
</DocumentFragment>
`;
